# RIOT

./: .gitignore  CMakeLists.txt
CMake/: arm-gcc.toolchain.cmake  jlink.cmake  openocd.cmake
CMake/Platform/: RIOT.cmake
boards/nrf52dk/: CMakeLists.txt
boards/nucleo-f103/: CMakeLists.txt
boards/nucleo-f103/include/: board.h  periph_conf.h
boards/nucleo-f411/: board.c
boards/nucleo-f411/include/: board.h  periph_conf.h
boards/stm32f0discovery/: CMakeLists.txt
core/: CMakeLists.txt
cpu/: CMakeLists.txt
cpu/cortexm_common/: CMakeLists.txt
cpu/nrf52/: CMakeLists.txt
cpu/nrf5x_common/: CMakeLists.txt
cpu/nrf5x_common/periph/: CMakeLists.txt
cpu/stm32_common/: CMakeLists.txt  cmake_install.cmake
cpu/stm32_common/periph/: CMakeLists.txt
cpu/stm32f0/: CMakeLists.txt
cpu/stm32f1/: CMakeLists.txt
cpu/stm32f4/include/: cpu_conf.h  periph_cpu.h  stm32f411xe.h
cpu/stm32f4/ldscripts/: stm32f411re.ld
cpu/stm32f4/periph/: i2c.c
examples/hello-world/: CMakeLists.txt
examples/housebus/: CMakeLists.txt  Makefile  main.cpp
examples/housebus/include/board/nucleo/: f411.h
examples/housebus/include/common/: clock.h  oscillator.h
examples/housebus/include/cpu/cortex/: m4.h
examples/housebus/include/driver/: rgb.h
examples/housebus/include/driver/i2c/: pcal6408.h
examples/housebus/include/driver/spi/: pcd8544.h
examples/housebus/include/dummy/: clock.h  gpio.h  i2c.h  periph.h  pwm.h  spi.h
examples/housebus/include/interface/: display.h  gpio.h  i2c.h  pwm.h  spi.h
examples/housebus/include/periph/: adc.h  clock.h  gpio.h  i2c.h  nvic.h  periph.h  pwm.h  rtc.h  spi.h  usart.h
examples/housebus/include/processor/: stm32f411.h
examples/housebus/include/type/: class.h  color.h  direction.h
examples/housebus/src/driver/i2c/: pcal6408.cpp
examples/housebus/src/periph/: clock.cpp
examples/housebus/test/: test.cpp
examples/housebus/tools/: alternate_pins.py
sys/: CMakeLists.txt
sys/auto_init/: CMakeLists.txt
sys/newlib/: CMakeLists.txt
sys/tsrb/: CMakeLists.txt
sys/uart_stdio/: CMakeLists.txt
