get_property(APPLICATION_OBJECTS TARGET cpu PROPERTY APPLICATION_OBJECTS)
add_executable(hello-world main.c ${APPLICATION_OBJECTS})
target_link_libraries(hello-world cpu board_drivers)
get_property(APPLICATION_LINK_FLAGS TARGET cpu PROPERTY APPLICATION_LINK_FLAGS)
set_property(TARGET hello-world APPEND PROPERTY LINK_FLAGS ${APPLICATION_LINK_FLAGS} )
